
HTMLEmailPublisher:
----------------------
* Now tries to determine the locations for xslDir and css automatically when they're not specified
* HTMLEmailPublisher fails to transform xml (CC-112)
* Set the default XSL filelist to header.xsl and buildresult.xsl like the reporting application.

JMX:
----------------------
* Add ability to require username/password for JMX interface (CC-128). Patch by Glenn Brown
* Upgraded to MX4J 3.0.1

JMX Support:
----------------------
* Expose Project's BuildStartTime as JMX attribute (CC-92). Patch by Jerome Lacoste

MavenBuilder:
----------------------
* Require goal attribute. Fixes problem where builder would silently do nothing without one. Patch by Jerome Lacoste

MavenSnapshotDependency:
----------------------
* fix NPE when dependency lacks version tag. Patch by Josh W. Arnold
* MavenSnapshotDependency NPE when no deps listed (CC-248). Patch by Tim Shadel
* add default dependency type of jar (CC-252). Patch by Jerome Lacoste

MKS:
----------------------
* Overhaul of MKS source control. Submitted by Dominik Hirt
* Always use -S option on resync. Patch by Engebakken Geir

OnFailurePublisher & OnSuccessPublisher:
----------------------
* Add new publisher that simply wraps other publishers and invokes them only if the build was successful.
* OnFailure version added (& common ConditionalPublisher extracted) by Robert Smith

OSEnvironment
----------------------
* Fix problem on systems where "env" doesn't return list of '=' separated name/value pairs (CC-166). Patch by Jerome Lacoste

P4:
----------------------
* Use double quote only on Windows, single quote otherwise.
* Migrated to use CommandLine util class for correct execution across environments. Patch by Jason Parrott.
* Fixed parsing logic when file has more than 100 revisions. Patch by David Golombek.
* Add optional Perforce password (CC-208). Patch by J D Glanville
* Add correctForServerTime for when using across timezones. Patch by Patrick Conant

P4Bootstrapper: